Fixed some font sizes that were too big

--- a/webapp/src/main/resources/static/css/posts.css
+++ b/webapp/src/main/resources/static/css/posts.css
@@ -95,9 +95,8 @@ body {
 }
 
 .responsive-label {
-    font-weight: bold;
     color: black;
-    font-size: 2vw;
+    font-size: 1.5vw;
 }
 
 .return {
